--- a/EvoComp.cbp
+++ b/EvoComp.cbp
@@ -11,6 +11,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option parameters="config2" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
@@ -33,6 +34,8 @@
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="main.cpp" />
+		<Unit filename="mtrandom.cpp" />
+		<Unit filename="mtrandom.h" />
 		<Extensions>
 			<code_completion />
 			<debugger />
